<resources>
    <string name="facebook_app_id">1856809454618573</string>
    <string name="fb_login_protocol_scheme">fb1856809454618573</string>
    <string name="app_name">Studyapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="navigation_drawer_materias">Materias</string>
    <string name="navigation_drawer_grupos">Grupos</string>
    <string name="navigation_drawer_perfil">Perfil</string>
    <string name="navigation_drawer_configuracion">Configuración</string>
    <string name="navigation_drawer_cerrar_sesion">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
