<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_materias"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_drawer_materias" />
        <item
            android:id="@+id/nav_grupos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_drawer_grupos" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_perfil" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_configuracion" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_drawer_cerrar_sesion" />
        </menu>
    </item>

</menu>
